# libafl_learning

./: .gitignore  Cargo.toml
exercise-2/: Cargo.toml  Makefile.toml
exercise-2/libexif/doc/doxygen-output/libexif-api.html/: annotated.html  annotated_dup.js  dir_04d2bd150f7cc849eeec70b9b0fdccb1.html  exif-byte-order_8h_source.html  exif-content_8h_source.html  exif-data-type_8h_source.html  exif-data_8h.js  exif-data_8h__dep__incl.map  exif-data_8h__incl.md5  exif-format_8h_source.html  exif-ifd_8h_source.html  exif-loader_8h__dep__incl.md5  exif-loader_8h__incl.map  exif-log_8h.html  exif-log_8h__dep__incl.map  exif-log_8h__dep__incl.md5  exif-log_8h__incl.map  exif-log_8h__incl.md5  exif-log_8h_source.html  exif-mem_8h__dep__incl.map  exif-mem_8h__dep__incl.md5  exif-mem_8h__incl.md5  exif_8h_source.html  globals.html  globals_type.html  i18n_8h_source.html  index.html  structExifRational.html  structExifSRational.html  struct__ExifContent__coll__graph.map  struct__ExifContent__coll__graph.md5  struct__ExifData__coll__graph.md5  struct__ExifEntry__coll__graph.map  struct__ExifMnoteData.html  struct__ExifMnoteData__coll__graph.map  struct__ExifMnoteData__coll__graph.md5  structexif__rational.html  (+4 more)
exercise-2/libexif/po/: de.po  es.po  fr.po  pl.po  ru.po  vi.po
exercise-2/reports/: afltriage_ASAN_unknown-crash_WRITE_exif_mnote_data_olympus_save_4a9f02cf2710933463bb311fb871f5a4.txt  afltriage_SIGSEGV_exif_get_sshort_142bdc732170639465fba428d4af9c26.txt
exercise-2/solutions/: 5ef8b4931fc88d8d  7869ad5a2ce59150  c5520f1f8d9aaa22
exercise-2/src/: lib.rs
(+240 files in other folders)
