[package]
name = "exercise-2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libafl = { version = "0.8.2" }
libafl_cc = { version = "0.8.2" }
libafl_targets = { version = "0.8.2", features = [
    "libfuzzer",
    "sancov_pcguard_hitcounts",
    "sancov_cmplog",
] }

[lib]
name = "exercisetwo"
crate-type = ["staticlib"]